--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -160,6 +160,18 @@
 	font-weight: bold;
 }
 
+.latest-deals .see-all {
+	color: $primary-text-color;
+	padding-left: 35px;
+	font-size: 14px;
+	font-weight: 500;
+	letter-spacing: 0.9px;
+}
+
+.latest-deals .see-all:hover {
+	text-decoration: underline;
+}
+
 .latest-deals .deals {
 	padding: 20px;
 }
@@ -194,8 +206,8 @@
 }
 
 .latest-deals .deal-info .amount-saved {
-	font-weight: 300px;
-	font-size: 12px;
+	font-weight: 500;
+	font-size: 13px;
 	color: $secondary-color;
 }
 
@@ -225,12 +237,12 @@
 
 .product-description h4 {
 	padding-bottom: 4px;
-	font-weight: lighter;
-	letter-spacing: 0.8px;
+	font-weight: 500;
+	letter-spacing: 0.9px;
 }
 
 .product-description h4,h5 {
-	font-size: 15px;
+	font-size: 14px;
 }
 
 .product-description h5 span {
@@ -247,7 +259,6 @@
 
 .item {
 	width: 100%;
-	box-shadow: 0px 1px 3px 0px #b3b3b3;
 	margin-bottom: 20px;
 }
 
@@ -626,7 +637,7 @@
 	box-shadow: -1px 2px 3px rgba(0,0,0,0.5);
 }
 
-/** cart page **/
+/** Cart Page **/
 .cart {
 	@extend .page-setup;
 }
@@ -720,10 +731,42 @@
 	color: $primary_color;
 }
 
+/** Shop **/
+.shop {
+	@extend .page-setup;
+}
+
+.shop .shop-container {
+	width: 95%;
+	margin: auto;
+}
+
+.shop-container .shop-left ul {
+	list-style: none;
+	padding-bottom: 8px;
+}
+
+.shop-left ul li {
+	display: inline-block;
+}
+
+.shop-left ul li.filter-title {
+	width: 90%;
+	font-size: 20px;
+	font-weight: 500;
+}
+
+.shop-left #categories ul li {
+	display: block;
+	padding-bottom: 10px;
+	font-size: 13px;
+	font-weight: 400;
+}
+
 /** 404 Error **/
 .error-404 {
 	background-color: $bg-color;
-	min-height: 90vh;
+	min-height: 80vh;
 }
 
 .error-404 .error-text {
@@ -856,16 +899,16 @@
 	@extend .page-setup;
 }
 
-.checkout .checkout_container {
+.checkout .checkout-container {
 	@extend .page-container-setup;
 }
 
-.checkout .personal_information {
+.checkout .personal-information {
 	width: 90%;
 	margin: auto;
 }
 
-.checkout .personal_information input[type=text], select {
+.checkout .personal-information input[type=text], select {
 	width:100%;
 	margin: 10px 0px;
 	height: 40px;
@@ -874,7 +917,7 @@
 	border: 1px solid $primary_color;
 }
 
-.checkout_details {
+.checkout-details {
 	width: 100%;
 	height: auto;
 	margin-top: 10px;
@@ -884,28 +927,28 @@
 	box-sizing: border-box;
 }
 
-.checkout_details ul {
+.checkout-details ul {
 	list-style: none;
 }
 
-.checkout_details ul li:first-child {
+.checkout-details ul li:first-child {
 	display: inline-block;
 	width: 75%;
 }
 
-.checkout_details ul li:last-child {
+.checkout-details ul li:last-child {
 	display: inline-block;
 	width: 19%;
 }
 
-.checkout_details a {
+.checkout-details a {
 	padding: 5px 50px;
 	background-color: $secondary_color;
 	color: $tertiary_white;
 	border-radius: 5px;
 }
 
-.checkout_details .fab.fa-cc-visa, .fab.fa-cc-mastercard, .fab.fa-cc-paypal {
+.checkout-details .fa.fa-cc-visa, .fa.fa-cc-mastercard, .fa.fa-cc-paypal {
 	font-size: 17px;
 }
 
