--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -187,7 +187,7 @@
 }
 
 .latest-deals .deal:hover {
-	box-shadow: 0px 2px 3px 1px rgba(0,0,0,0.1);
+	box-shadow: 0px 2px 3px -1px rgba(0,0,0,0.5);
 	border-radius: unset;
 }
 
@@ -654,7 +654,7 @@
 }
 
 .table .fa.fa-trash {
-	color: red;
+	color: $primary-color;
 }
 
 .table .delete {
@@ -761,6 +761,92 @@
 	padding-bottom: 10px;
 	font-size: 13px;
 	font-weight: 400;
+}
+
+.product {
+	background-color: #fff;
+	padding: 15px;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+	transition: 0.2s ease-in-out;
+}
+
+.product .product-description h3.title {
+	font-size: 16px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	color : $grey;
+	box-sizing: border-box;
+	text-overflow: ellipsis;
+}
+
+.product .product-description .price {
+	font-size: 17px;
+	font-weight: bold;
+	color: #000;
+	padding: 8px 0px;
+	font-family: sans-serif;
+
+}
+
+.product-description .currency-symbol {
+	font-size: 18px;
+	font-weight: bold;
+	color: #000;
+}
+
+.product .below-title {
+	margin-bottom: 4px;
+}
+
+.product .below-price {
+	margin-top: 4px;
+}
+
+.product .add-to-cart {
+	padding: 5px 46px;
+	color: $primary-color;
+	border-radius: 5px;
+	font-weight: 500;
+	border: 1px solid $primary-color;
+}
+
+.product-img {
+	width: 100%;
+	height: 200px;
+}
+
+.product:hover {
+	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.5);
+	cursor: pointer;
+}
+
+.pagination ul {
+	list-style: none;
+}
+
+.pagination ul li {
+	display: inline-block;
+	padding-right: 10px;
+	cursor: pointer;
+}
+
+.pagination ul li:active {
+	color: #fff;
+}
+
+.pagination ul li span {
+	padding: 5px 10px;
+	background-color: $primary-color;
+	border-radius: 5px;
+	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.5);
+}
+
+/* This is the checked state */
+.custom-radio .custom-control-input:checked~.custom-control-label::before,
+.custom-radio .custom-control-input:checked~.custom-control-label::after {
+    background-color: $primary-color; 
+    border-radius: 50%;
 }
 
 /** 404 Error **/
