--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -29,11 +29,11 @@
 
 /** Navbar **/
 .navbar-bg-color {
-	background-color: $primary_color;
+	background-color: $primary-color;
 }
 
 .main-nav {
-	height: 55px;
+	height: 50px;
 }
 
 .container {
@@ -157,7 +157,7 @@
 
 .info-box .col-md-6 h2 {
 	text-align: center;
-	padding-top: 30%;
+	padding-top: 27%;
 	color: $secondary-color;
 }
 
@@ -177,8 +177,13 @@
 	transition: 0.3s ease-in-out;
 	top: 43%;
 	left: 25%;
-
+	border-radius: 5px;
 }
+
+// .info-box .img {
+// 	width: 90%;
+// 	margin: auto;
+// }
 
 /** Latest Deals **/
 .latest-deals {
