--- a/public/src/App.css
+++ b/public/src/App.css
@@ -484,8 +484,66 @@ ul {
 }
 
 .product-slider .img-container {
+  padding: 20px;
   width: 100%;
   height: 400px;
+}
+
+.product-details {
+  padding: 20px;
+}
+
+.product-details h2 {
+  border-bottom: 1px solid #f5f5f5;
+  padding: 0px 0px 20px 0px;
+}
+
+.product-details h3 {
+  border-bottom: 1px solid #f5f5f5;
+  padding: 20px 0px 20px 0px;
+  font-weight: 300;
+}
+
+.product-details h3 sup {
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.product-details h3 span {
+  font-size: 14px;
+  font-weight: 500;
+  padding-left: 15px;
+  color: #33b27b;
+}
+
+.product-details .add-to-cart {
+  padding: 9px 75px;
+  font-size: 16px;
+  font-weight: 500;
+  background-color: #33b27b;
+  color: #fff;
+  border-radius: 5px;
+}
+
+.product-details ul li {
+  list-style: none;
+  display: inline-block;
+  padding-right: 15px;
+}
+
+.product-details ul a {
+  padding: 5px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  font-size: 15px;
+}
+
+.product-details ul a i.fa.fa-facebook {
+  color: #3b5998;
+}
+
+.product-details ul a i.fa.fa-twitter {
+  color: #00acee;
 }
 
 /** About Page **/
