--- a/public/src/App.css
+++ b/public/src/App.css
@@ -4,7 +4,7 @@
   padding: 20px;
 }
 
-.page-container-setup, .success .success_container, .checkout .checkout-container, .account .account-container, .auth .auth_container, .cart_empty .cart_container_empty, .cart .cart-container, .contact .contact-container, .about .about-container, .product-single .product-single-info {
+.page-container-setup, .success .success_container, .checkout .checkout-container, .account .account-container, .auth .auth_container, .cart_empty .cart_container_empty, .cart .cart-container, .contact .contact-container, .about .about-container, .single-product-description, .product-single .product-single-info {
   width: 95%;
   margin: 0px auto;
   padding: 20px;
@@ -544,6 +544,23 @@ ul {
 
 .product-details ul a i.fa.fa-twitter {
   color: #00acee;
+}
+
+.single-product-description {
+  margin-top: 20px;
+}
+
+.single-product-description h3 {
+  border-bottom: 1px solid #f5f5f5;
+  padding: 10px 0px;
+}
+
+.single-product-description h5 {
+  margin-top: 10px;
+}
+
+.single-product-description p {
+  padding-top: 10px;
 }
 
 /** About Page **/
