--- a/public/src/App.css
+++ b/public/src/App.css
@@ -202,17 +202,16 @@ ul {
 
 .info-box .btn-shop {
   position: absolute;
-  padding: 10px 30px;
+  padding: 5px 15px;
   background-color: #ed017f;
   color: #fff;
   border: 1px solid #ed017f;
   text-transform: uppercase;
   font-family: sans-serif;
-  box-shadow: -1px 3px 4px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.5);
   transition: 0.3s ease-in-out;
   top: 40%;
-  left: 25%;
-  border-radius: 5px;
+  left: 30%;
   display: none;
   z-index: 99;
 }
@@ -497,7 +496,7 @@ ul {
 }
 
 .contact-info-inner form input[type=submit] {
-  padding: 9px;
+  padding: 8.3px;
   background-color: #ed017f;
   color: #fff;
   border: none;
@@ -554,6 +553,7 @@ ul {
 .copyright-area {
   width: 100%;
   background-color: #000;
+  box-shadow: 0px 2px 3px 1px #ed017f;
 }
 
 .copyright-inner {
@@ -565,6 +565,7 @@ ul {
 
 .copyright-inner footer {
   font-weight: lighter;
+  font-size: 14px;
   padding: 10px 0px;
 }
 
