--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -34,5 +34,56 @@ ul {
 }
 
 /** reset code **/
+.page-setup {
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
+
+.page-container-setup {
+  width: 95%;
+  margin: 0px auto;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #fff;
+}
+
+/** Navbar **/
+.navbar-bg-color {
+  background-color: #ed017f;
+}
+
+.main-nav {
+  height: 50px;
+}
+
+.container {
+  min-width: 98% !important;
+}
+
+.navbar {
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
+}
+
+.navbar .nav-item {
+  padding-right: 20px;
+}
+
+.navbar a.nav-link {
+  color: #fff;
+  font-size: 14px;
+  padding-right: 20px;
+  text-transform: uppercase;
+}
+
+.navbar a.nav-link i.fa.fa-shopping-cart {
+  color: #33b27b;
+  font-size: 20px;
+  padding-right: 3px;
+}
+
+.navbar .navbar-brand {
+  color: #fff;
+}
 
 /*# sourceMappingURL=style.css.map */
