--- a/admin/src/assets/scss/style.scss
+++ b/admin/src/assets/scss/style.scss
@@ -8,13 +8,14 @@
 	padding: 20px;
 }
 
-.page-container-setup {
+.page-inner-setup {
 	width: 95%;
 	margin: 0px auto;
 	padding: 20px;
 	box-sizing: border-box;
-	background-color: $tertiary_white;
+	background-color: $tertiary-white;
 }
+
 
 /** Navbar **/
 .navbar-bg-color {
@@ -46,4 +47,115 @@
 
 .navbar .navbar-brand {
 	color: $tertiary_white;
+}
+
+.navbar a.nav-link i.fa.fa-bell, i.fa.fa-cog {
+	font-size: 18px;
+}
+
+.navbar .badge {
+	border-radius: 9px;
+}
+  
+.navbar #notification {
+	  font-size: 11px;
+	  background: #292929;
+	  color: $tertiary_white;
+	  padding: 2px 5px;
+	  vertical-align: top;
+}
+
+/** Breadcrumb **/
+.breadcrumb {
+	background-color: #ffffff !important;
+	height: 50px;
+	line-height: 50px;	
+}
+
+.breadcrumb .breadcrumb-inner{
+	width: 95%;
+	margin: 0px auto;
+}
+
+/** Dashboard **/
+.dashboard {
+	@extend .page-setup;
+}
+
+.dashboard .dashboard-inner {
+	@extend .page-inner-setup;
+}
+
+.dashboard .custom-card {
+	box-sizing: border-box;
+	width: 100%;
+	height: 100px;
+	padding: 10px;
+	color: #ffffff;
+	margin-bottom: 15px;
+}
+
+.dashboard .custom-card.first {
+	background: #2193b0 !important;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #6dd5ed, #2193b0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.dashboard .custom-card.second {
+	background: #11998e;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.dashboard .custom-card.third {
+	background: #f953c6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #b91d73, #f953c6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.custom-card-inner h2 {
+	  font-size: 18px;
+}
+
+.custom-card-inner h3 {
+	  font-size: 24px;
+	  font-weight: lighter;
+}
+
+.custom-card-inner h6 {
+	  font-size: 12px;
+	  font-weight: bold;
+}
+
+.custom-card-inner .decimal-point {
+	  font-size: 14px;
+}
+
+.dashboard-inner .admin-profile {
+	text-align: center;
+}
+
+.dashboard-inner .admin-profile h6 {
+	font-size: 18px;
+	font-weight: lighter;
+}
+
+.dashboard-inner .left {
+	background-color: #f5f5f5;
+	margin-bottom: 15px;
+}
+
+.dashboard-inner .left ul {
+	list-style: none;
+}
+
+.dashboard-inner .left ul li i.fa.fa-tachometer, i.fa.fa-gift, i.fa.fa-shopping-basket, i.fa.fa-cog {
+	width: 15%;
+}
+
+.dashboard-inner .left ul li {
+	font-size: 20px;
+	padding-bottom: 15px;
 }
